--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,24 +1,28 @@
 .container {
-  padding: 0 2rem;
+  display: flex;
+  flex: 1;
+  padding: 0;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .footer {
+  width: 100%;
   display: flex;
-  flex: 1;
+  height: 90px;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  background: royalblue;
 }
 
 .footer a {
